2011-10-27 Gökçen Eraslan <gokcen@pardus.org.tr>
	* tr.typ: new turkish lesson converted from ktouch

2011-09-30 Tim Marston <edam@waxworlds.org>

	* c.typ: added Colemak typing lessons.

2011-09-07 Tim Marston <edam@waxworlds.org>

	* esp.typ: fixed some typos ("tr àèìòù áéíóú"), thanks to MAbeeTT
	  <MAbeeTT@gmail.com> for reporting.

2011-08-14 Felix Natter <fnatter@gmx.net>

	* ktde.typ: remove "Grundstellung" from drill text (from
	  german.ktouch.xml)
	* ktde2.typ: remove because it was generated from the same source
	  source as ttde.typ (tipptrainer 0.6.0), and ttde.typ includes more
	  explanations => ktde2.typ is not generated from
	  german3.ktouch.xml!!

2011-08-07 Felix Natter <fnatter@gmx.net>

	* kt*.typ: convert and rename lessons from ktouch 1.6
	* ttde.typ: converted from tipptrainer 0.6.0

2011-03-03  Tim Marston <edam@waxworlds.org>

	* t.typ: punctuation error, reported to Debian by Percival Tiglao
	  <dragontamer5788@yahoo.com>

2010-12-21  Tim Marston <edam@waxworlds.org>

	* lessons/u.typ, lessons/t.typ: fixed minor typos (thanks to Elmar
	  Zander <elmar@zandere.de> for reporting)

2008-05-12  Paul Goins  <general@vultaire.net>

	* ChangeLog: Minor formatting updates.

2008-05-04  Paul Goins  <general@vultaire.net>

	* esp.typ: A mistake involving a not-yet-introduced key was corrected.
	  This was submitted by igor@tamarapatino.org, and credited to
	  Laura Victoria Quishpe <sekhmetnightmare@hotmail.com>.

2004-09-30  Dmitry Rutsky <balto@bk.ru>

	* ru.typ:	minor improvements.

2004-07-31  Dmitry Rutsky <rutsky@school.ioffe.rssi.ru>

	* q.typ:  some missing key fingering directions were added by
	  Iain Cunningham <iain.cunningham@ntlworld.com>.

2004-05-07  Dmitry Rutsky <rutsky@school.ioffe.rssi.ru>

	* ru.typ: corrected unlearned-key bug in IF_Ib lesson last exercise.
	  Thanks to Renat Sabitov <srr@stacksoft.ru> who has reported this!
	  He has also reported some spelling error on 18th February, which I've