@@ -1,5 +1,6 @@
 2011-10-27 Gökçen Eraslan <gokcen@pardus.org.tr>
-	* tr.typ: new turkish lesson converted from ktouch
+
+	* kttr.typ: new turkish lesson converted from ktouch
 
 2011-09-30 Tim Marston <edam@waxworlds.org>
 
